# fluid-toy

./: .gitignore  Cargo.toml  README.md
configs/: export_001.json
docs/: marching_cubes_reference.md
scripts/: validate-shaders.ps1
src/: app.rs  launch.rs  main.rs
src/gpu/: mod.rs
src/gui/: mod.rs
src/render/: camera.rs  caustics.rs  container_renderer.rs  environment.rs  fluid_renderer.rs  fluid_renderer.wgsl  gtao.rs  marching_cubes.rs  mc_tables.rs  mesh_loader.rs  mod.rs  particle_renderer.rs  particle_renderer_3d.rs  post_process.rs  rigid_body_renderer.rs  screen_space_fluid.rs  spray_renderer.rs  wireframe.rs
src/shaders/: compute.wgsl  container.wgsl  container_common.wgsl  fluid_blur.wgsl  fluid_composite.wgsl  fluid_depth.wgsl  fluid_depth_resolve.wgsl  fluid_depth_smooth.wgsl  fluid_thickness.wgsl  fxaa.wgsl  grid_build.wgsl  grid_clear.wgsl  grid_common.wgsl  grid_reorder.wgsl  gtao.wgsl  mc_anisotropy.wgsl  mc_back_depth.wgsl  mc_blur.wgsl  mc_caustics_filter.wgsl  mc_caustics_gbuffer.wgsl  mc_caustics_splat.wgsl  mc_density.wgsl  mc_environment.wgsl  mc_generate.wgsl  mc_render.wgsl  pcisph_finalize.wgsl  pcisph_predict.wgsl  pcisph_solve.wgsl  post_process.wgsl  prefix_scan.wgsl  prefix_sum.wgsl  prefix_sum_shift.wgsl  render.wgsl  render_3d.wgsl  rigid_body.wgsl  rigid_body_mesh.wgsl  sph_density.wgsl  sph_density_3d.wgsl  sph_density_3d_grid.wgsl  sph_force.wgsl  (+21 more)
src/simulation/: mod.rs  particle.rs  sph.rs  sph_3d.rs  sph_3d_grid.rs  spray.rs
src/state/: interaction.rs  mod.rs  post_process.rs  rendering.rs  rigid_body.rs  simulation.rs
