[package]
name = "fluid-toy"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "27"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
image = { version = "0.25", features = ["hdr"] }
half = "2.4"

# GUI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
